Update github actions workflow, create new scripts, add app

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,8 +5,18 @@ on:
 jobs:
   playwrighttests:
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.42.1-focal
+      env: 
+        ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
     steps:
       - name: Checkout repository 
         uses: actions/checkout@v2
-      - name: Say hello
-        run: echo Hello
+      - name: Run Tests
+        run: |
+          echo 'Start shopping store app'
+          chmod +x ./shopping-store-linux-amd64 &
+          echo 'Instal dependecies from lockfile'
+          npm ci
+          echo 'Run playwright tests'
+          npm run test:ci
