--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,22 +1,22 @@
 name: Playwright Tests
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 jobs:
   playwrighttests:
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.42.1-focal
-      env: 
+      env:
         ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
     steps:
-      - name: Checkout repository 
+      - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Run Tests
+      - name: Run tests
         run: |
-          echo 'Start shopping store app'
-          chmod +x ./shopping-store-linux-amd64 &
-          echo 'Instal dependecies from lockfile'
+          echo "Start the shopping store application"
+          ./shopping-store-linux-amd64 &
+          echo "Install dependencies from lockfile"
           npm ci
-          echo 'Run playwright tests'
+          echo "Run playwright tests"
           npm run test:ci
